Fix SQL statement in ApplicationCacheStorage::verifySchemaVersion() https://bugs.webkit.org/show_bug.cgi?id=237905

Reviewed by Geoffrey Garen.

This was leading to the following logging:
`SQLiteDatabase::prepareStatement: Failed to prepare statement PRAGMA user_version=%7`

* loader/appcache/ApplicationCacheStorage.cpp:
(WebCore::ApplicationCacheStorage::verifySchemaVersion):



Canonical link: https://commits.webkit.org/248445@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291306 268f45cc-cd09-0410-ab3c-d52691b4dbfc